# aicelab-eval-tool

./: .gitignore  Flowchart.txt  main.py  pyproject.toml
backend/: main.py  pyproject.toml  test.py
backend/data/: m07167-FSA.txt  m07389.txt
backend/data/collection/: m07168-FSA.txt  m07168.txt  m07169-FSA.txt  m07170.txt  m07185-FSA.txt  m07187.txt  m07188-FSA.txt  m07242-FSA.txt  m07242.txt  m07243.txt  m07244-FSA.txt  m07247-FSA.txt  m07247.txt  m07248-FSA.txt  m07250-FSA.txt  m07250.txt  m07251.txt  m07252-FSA.txt  m07252.txt  m07253-FSA.txt  m07255-FSA.txt  m07256-FSA.txt  m07256.txt  m07257-FSA.txt  m07260-FSA.txt  m07260.txt  m07261-FSA.txt  m07261.txt  m07262-FSA.txt  m07262.txt  m07263.txt  m07265-FSA.txt  (+56 more)
backend/physics/: CoF.py  statistics.py  utility_functions.py
backend/read_files/: SRV_FSA.py  load.py
data/collection/: m07167.txt  m07169.txt  m07170-FSA.txt  m07185.txt  m07186-FSA.txt  m07186.txt  m07187-FSA.txt  m07188.txt  m07243-FSA.txt  m07244.txt  m07248.txt  m07251-FSA.txt  m07253.txt  m07254-FSA.txt  m07254.txt  m07255.txt  m07257.txt  m07258-FSA.txt  m07258.txt  m07259-FSA.txt  m07259.txt  m07263-FSA.txt  m07264-FSA.txt  m07264.txt  m07266.txt  m07335-FSA.txt  m07335.txt  m07336-FSA.txt  m07337-FSA.txt  m07339.txt  m07354.txt  m07356.txt  m07358.txt  m07360.txt  m07361.txt  m07362-FSA.txt  m07363-FSA.txt  m07363.txt  m07364-FSA.txt  m07364.txt  (+22 more)
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
physics/: statistics.py  stroke.py  utility_functions.py
read_files/: OFT.py  SRV.py  SRV_FSA.py  load.py
(+19 files in other folders)
